fix contrast copy clipboard

--- a/client/app/styles/hearings/_hearings.scss
+++ b/client/app/styles/hearings/_hearings.scss
@@ -299,6 +299,7 @@
     border: 1px solid $color-gray-dark;
     box-shadow: inset 0 0 0 1px $color-gray-lightest;
     color: $color-gray;
+    background-color: $color-white;
 
     &:hover {
       background: $color-gray-dark;
